src/components/Project.css
.project-container {
  display: grid;
  grid-template-columns: 100%;
  padding: 20px;
  margin: 12px;
  max-width: 80vw;
}

@media (min-width: 600px) {
  .project-container {
    grid-template-columns: 200px auto;
  }
}

.project-title
, .project-text-description
, .project-text-notes {
  grid-column: 1 / -1;
}

.project-title {
  padding-bottom: 15px;
}

.project-image-holder {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  padding: 4px;
  /* min-height: 70%; */
}

.project-image-holder img {
  border-radius: 3px
}

.project-image-holder > button {
  font-size: 1.5em;
  padding: 2px 4px;
  position: absolute;
  bottom: 3px;
  border-width: 1px;
}

.project-image-holder > button:nth-child(2) {
  left: 3px;
}

.project-image-holder > button:nth-child(3) {
  right: 3px;
}

@media (min-width: 600px) {
  .project-image-holder button {
    font-size: 1.1em;
  }
}

.project-text-holder-links-techlist
, .project-text-description
, .project-text-notes {
  border-top: 4px solid var(--projects-card-shadow);
  border-left: 4px solid var(--projects-card-shadow);
  border-right: 4px solid var(--projects-card-shadow);
  padding: 14px 20px;
  border-radius: 8px;
}

.project-text-holder-links-techlist {
  display: flex;
  flex-flow: column;
  justify-content: space-around;
}

.project-text-techlist {
  display: flex;
  flex-flow: column;
  flex-grow: 1;
}

.project-container h6 {
  border-bottom: 2px solid var(--projects-card-shadow);
  margin-bottom: 10px;
}

.project-text-techlist-list {
  display: flex;
  flex-flow: row;
  flex-grow: 1;
  align-items: start;
  justify-content: space-around;
}

.project-text-techlist-column {
  text-align: start;
}

.project-text-techlist-list li {
  margin-bottom: 5px;
}

.project-text-links {
  display: flex;
  justify-content: space-around;
}

.project-text-notes {
  border-bottom: 4px solid var(--projects-card-shadow);
}

